# ece-473-tm4c123gxl-rust

./: .gitignore  Cargo.toml
.cargo/: config.toml
examples/: switches_to_led.rs
src/: lib.rs  main--ideas.rs  main.rs
src/lib/: board.rs  memory.rs  mod.rs  registers.rs  uart.rs  utils.rs
src/lib/gpio/: mod.rs  pins.rs  ports.rs
