[package]
authors = ["Jacob Babich <jacob@katniss.top>"]
edition = "2021"
name = "driver-and-task-library"
version = "4.14.0"

[dependencies]
cortex-m-rt = "0.6.10"

[lib]
path = "src/lib/mod.rs"
test = false
bench = false

[[bin]]
name = "program"
path = "src/main.rs"
test = false
bench = false

[profile.release]
# These comments are from the starter project (not written by me). I left them in since they explain it:
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
